--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "minimist": "^1.2.5",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.29",
     "negotiator": "^0.6.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
@@ -43,8 +44,9 @@
     "pug": "^3.0.2",
     "sequelize": "^6.6.5",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^2.4.1",
-    "tslint-config-prettier": "^1.18.0"
+    "socket.io": "^4.2.0",
+    "tslint-config-prettier": "^1.18.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
