--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "argon2": "^0.28.2",
     "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.1",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
