--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "author": "rjmacarthy",
   "private": false,
   "scripts": {
-    "dev": "npm run build && concurrently --kill-others \"tsc -w -p src\" \"nodemon dist/index.js -e ts\"",
+    "dev": "nodemon src/index.ts",
     "debug": "npm run build && concurrently --kill-others \"tsc -w -p src\" \"nodemon --inspect dist/index.js -e ts\"",
     "test:watch": "mocha -r ts-node/register -w ./spec/**/*.spec.ts --watch-extensions ts",
     "test": "mocha -r ts-node/register -w ./spec/**/*.spec.ts",
