Made changes to the API
1. The newMessage event is emitted to everyone in a room. Including the
   sender
2. The newMessage socket event returns every attribute. Including time
   created, time updated and the Unix Time
3. The above is true also for postMessage and postMessageByUserId

Other minor changes including typing the return value with the interface
already made for the Message Attributes

--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -4,6 +4,7 @@
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "printWidth": 120
   }
   
