--- a/front-end/.prettierrc
+++ b/front-end/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "printWidth": 120
 }
