--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "random-word-slugs": "^0.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.2.0",
