--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^8.32.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "socket.io-client": "^4.2.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
