--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: Deploy
-  on:
-    push:
-      branches: [ main ]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+    steps:
     - name: SSH setup
       run: |
         mkdir -p ~/.ssh/
