--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,6 @@ jobs:
         script: |
           cd chat-app
           git pull
-          pm2 restart client
-          pm2 restart server
+          /home/rushi/.nvm/versions/node/v16.8.0/bin/pm2 restart client
+          /home/rushi/.nvm/versions/node/v16.8.0/bin/pm2 restart server
     
