--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/passport": "^1.0.7",
     "argon2": "^0.28.2",
     "body-parser": "^1.13.3",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "cross-env": "^5.2.1",
