--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.23.0",
     "random-word-slugs": "^0.1.5",
     "react": "^17.0.2",
+    "react-component-transition": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
     "react-router-dom": "^5.3.0",
