--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,18 @@
     "argon2": "^0.28.2",
     "body-parser": "^1.13.3",
     "connect-mongo": "^4.6.0",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "cross-env": "^5.2.1",
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "fresh": "^0.5.2",
     "glob": "^5.0.14",
+    "ioredis": "^5.2.2",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "mongoose": "^5.12.13",
@@ -52,10 +54,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
+    "@types/connect-redis": "^0.0.18",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/lodash": "^4.14.170",
     "@types/mocha": "^5.2.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^8.10.66",
     "@types/sinon": "^4.3.3",
     "@types/socket.io": "^2.1.13",
