--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "express-typescript-starter",
-  "version": "1.0.14",
-  "author": "rjmacarthy",
+  "name": "slickchat-server",
+  "version": "0.1.0",
   "private": false,
   "scripts": {
     "dev": "nodemon src/index.ts",
     "debug": "npm run build && concurrently --kill-others \"tsc -w -p src\" \"nodemon --inspect dist/index.js -e ts\"",
-    "test:watch": "mocha -r ts-node/register -w ./spec/**/*.spec.ts --watch-extensions ts",
-    "test": "mocha -r ts-node/register -w ./spec/**/*.spec.ts",
     "build": "tsc -p src",
     "start": "node dist/index.js",
-    "build:docker": "docker build -t rjmacarthy/express-typescript-starter .",
-    "docker:compose": "docker-compose up",
     "format": "prettier --write 'src/**/*ts'",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "lint:test": "tslint -c tslint.json 'spec/**/*.ts'",
-    "format:test": "prettier --write 'spec/**/*ts'"
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "dependencies": {
     "@types/express-session": "^1.17.4",
     "@types/passport": "^1.0.7",
     "argon2": "^0.28.2",
     "body-parser": "^1.13.3",
-    "connect-mongo": "^4.6.0",
     "connect-redis": "^6.1.3",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
@@ -37,7 +29,6 @@
     "ioredis": "^5.2.2",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
-    "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.29",
     "negotiator": "^0.6.1",
