--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.23.0",
     "random-word-slugs": "^0.1.5",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.8",
     "react-component-transition": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3"
   }
 }
