--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "react-component-transition": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
